minor alignment issues

--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -1,41 +1,41 @@
-.details-container{
-    display:flex;
+.details-container {
+    display: flex;
 }
 
-.details-left{
-    margin-left:10px;
-    width:20%
+.details-left {
+    margin-left: 10px;
+    width: 20%
 }
 
-.back-button{
-    margin-left:24px !important; 
-    margin-top:8px !important; 
+.back-button {
+    margin-left: 24px !important;
+    margin-top: 8px !important;
     margin-bottom: 0px !important;
-    height:24px
+    height: 24px
 }
 
-.back-button{
+.back-button {
     text-decoration: none;
     font-weight: 600;
 }
 
-.details-middle{
-   width:60%;
-padding-right: 10%;
+.details-middle {
+    width: 60%;
 }
 
-.details-right{
-    width:20%;
+.details-right {
+    width: 20%;
+    margin-right: 10px;
 }
 
-.movie-detail-label{
+.movie-detail-label {
     font-weight: 600;
 }
 
-.movie-detail-plot{
-    margin-top:16px !important;
+.movie-detail-plot {
+    margin-top: 16px !important;
 }
 
-.details-page{
+.details-page {
     display: flex;
 }
